--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,11 @@
             <version>0.9.1</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.tika</groupId>
-            <artifactId>tika-parsers</artifactId>
-            <version>1.24.1</version>
+            <groupId>com.mpatric</groupId>
+            <artifactId>mp3agic</artifactId>
+            <version>0.9.1</version>
         </dependency>
+
 
     </dependencies>
 
