--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,11 @@
             <artifactId>mp3agic</artifactId>
             <version>0.9.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.7.0</version>
+        </dependency>
 
     </dependencies>
 
