--- a/client/pom.xml
+++ b/client/pom.xml
@@ -30,7 +30,11 @@
             <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-media</artifactId>
+            <version>14</version>
+        </dependency>
     </dependencies>
 
     <build>
